# RastClipper

./: CMakeLists.txt  LICENSE  README.md  RastClipperConfig.cmake.in
include/RastClipper/: RastClipper.h
src/: RastClipper.cpp
tests/: test_rastclipper.cpp
